[tool.poetry]
name = "maxent_graph"
version = "0.2.0"
description = "Implementations of some max-entropy graph models. Also has support for statistically-validated computations with those models, e.g. bipartite projection, weighted backbone."
authors = ["Deklan Webster <deklanw@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.1"
numba = "^0.50.1"
scipy = "^1.5.2"
python-igraph = "^0.8.2"
pandas = "^1.1.0"
jax = "^0.1.77"
jaxlib = "^0.1.55"
tabulate = "^0.8.7"
tqdm = "^4.52.0"
networkx = "^2.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
