[tool.poetry]
name = "maxent_graph"
version = "0.3.1"
description = "Implementations of some max-entropy graph models. Also has support for statistically-validated computations with those models, e.g. bipartite projection, weighted backbone."
authors = ["Deklan Webster <deklanw@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.22.4"
scipy = "^1.8.1"
python-igraph = "^0.9.11"
pandas = "^1.4.2"
tabulate = "^0.8.9"
tqdm = "^4.64.0"
networkx = "^2.8.4"
jax = "^0.3.13"
jaxlib = "^0.3.10"
numba = "^0.55.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pylint = "^2.14.1"
black = "^22.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
