[project]
name = "maxent_graph"
version = "0.3.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.4.33",
    "networkx>=3.3",
    "numba>=0.60.0",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "python-igraph>=0.11.6",
    "scipy>=1.14.1",
    "tabulate>=0.9.0",
    "tqdm>=4.66.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["ipykernel>=6.29.5", "pytest>=8.3.3"]
